src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Line__c</fullName>
        <formula>Account.Product_Line_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Communities_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field has one hour delay from when the user is activated.</inlineHelpText>
        <label>Active Communities User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Avidia_Service_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reg O question. Is borrower or co-borrower a service provider of Avidia Bank?</inlineHelpText>
        <label>Avidia Service Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Raising__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Relationship</label>
        <referenceTo>Solar_Loan_Syndication__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Mobile__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(MobilePhone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ MobilePhone+&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Phone__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(Phone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ Phone +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Skype__c</fullName>
        <formula>IF( LEN(ClickToDial__Skype_Username__c) &gt; 0, HYPERLINK(&quot;skype:&quot; &amp; ClickToDial__Skype_Username__c &amp; &quot;?call&quot;, ClickToDial__Skype_Username__c , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ ClickToDial__Skype_Username__c +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,false,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;), &quot;No Skype ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click-to-Call Skype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Country_Code__c</fullName>
        <description>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</description>
        <inlineHelpText>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Skype_Username__c</fullName>
        <label>Skype Username</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Brand_Key_from_Account__c</fullName>
        <description>Formula field for us in email templates</description>
        <formula>TEXT(Account.Client_Brand_Key__c)</formula>
        <inlineHelpText>Formula field for us in email templates</inlineHelpText>
        <label>Client Brand Key (from Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contatct_ID_18_digit__c</fullName>
        <description>Converts contact ID from 15-digit to 18-digit. Created for Marketing Cloud integration.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts contact ID from 15-digit to 18-digit. Created for Marketing Cloud integration.</inlineHelpText>
        <label>Contatct ID (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Score_2__c</fullName>
        <formula>Credit_Score__r.LASERCA__Credit_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FICO Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Credit Report Link</label>
        <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_ID__c</fullName>
        <label>Custom ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Opp_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Archive__c</fullName>
        <label>Email Archive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates Co-Applicant Employment</inlineHelpText>
        <label>Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employed_less_than_a_year__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox serves as the false value to the Employed longer than a year checkbox. It allows the CAP UI to show blank checkboxes without having to default to false.</inlineHelpText>
        <label>Employed less than a year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Annual_Salary__c</fullName>
        <inlineHelpText>Provided by loan applicant</inlineHelpText>
        <label>Employer Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Express_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by applicants with the CAP during a loan application</inlineHelpText>
        <label>Express Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Letter_First_Name__c</fullName>
        <formula>left(FirstName,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Letter First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Apt_Suite__c</fullName>
        <label>Home Apt/Suite</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LASERCA__Co_Applicant_DOB__c</fullName>
        <label>Co-Applicant DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LASERCA__Co_Applicant_Last_Name__c</fullName>
        <label>Co-Applicant Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Co_Applicant_Name__c</fullName>
        <label>Co-Applicant First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Co_Applicant_SSN__c</fullName>
        <label>**Deprecated</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Co_Applicant_Social_Security_Number__c</fullName>
        <description>xxx-xx-xxxx</description>
        <inlineHelpText>xxx-xx-xxxx</inlineHelpText>
        <label>Co-Applicant Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASERCA__Credit_Bureau__c</fullName>
        <label>**Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>TransUnion</fullName>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LASERCA__File_Number__c</fullName>
        <label>File Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Home_Address__c</fullName>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Home_City__c</fullName>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Home_Country__c</fullName>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Home_State__c</fullName>
        <label>Home State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Home_Zip__c</fullName>
        <label>Home Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASERCA__Pull_Credit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Credit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASERCA__Request_Credit_Bureau__c</fullName>
        <inlineHelpText>Select the credit Bureaus for the request. Caution, you must have access to the bureau (s) requested.</inlineHelpText>
        <label>Request Credit Bureau</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Transunion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LASERCA__Social_Security_Number__c</fullName>
        <description>xxx-xx-xxxx</description>
        <inlineHelpText>xxx-xx-xxxx</inlineHelpText>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASERCA__Special_Option__c</fullName>
        <label>Special Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade Applicant Only</fullName>
                </value>
                <value>
                    <fullName>Downgrade Co-Applicant Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LASERCA__TIN__c</fullName>
        <label>TIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Co-Applicants</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Recurring_Payment_Form__c</fullName>
        <formula>&quot;https://forms.bluewaverenewables.com/381548&amp;tfa_364=&quot;&amp;AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Recurring Payment Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_2__c</fullName>
        <inlineHelpText>Used for co-applicant &quot;Other Income&quot;</inlineHelpText>
        <label>Monthly Income 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_Details_2__c</fullName>
        <inlineHelpText>Used for co-applicant &quot;Other Income&quot;</inlineHelpText>
        <label>Monthly Income Details 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income_Details__c</fullName>
        <inlineHelpText>Used for co-applicant &quot;Other Income&quot;</inlineHelpText>
        <label>Monthly Income Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <inlineHelpText>Used for co-applicant &quot;Other Income&quot;</inlineHelpText>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NABCEP_Certification_Number__c</fullName>
        <label>NABCEP Certification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Co-Applicants</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Bank_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reg O question: I am an executive officer or director at a financial institution</inlineHelpText>
        <label>Other Bank Executive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for a loan applicant to provide other monthly income (alimony, dividend, rental, etc)</inlineHelpText>
        <label>Other Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the Partner Object related to this contact</inlineHelpText>
        <label>Partner Lookup</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Ownership__c</fullName>
        <description>From installer online application.</description>
        <inlineHelpText>From installer online application.</inlineHelpText>
        <label>Percent Ownership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plain_Text_Phone__c</fullName>
        <formula>LEFT( 

SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)

, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plain Text Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Policy Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Finance</label>
        <referenceTo>Project_Finance__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <formula>Custom_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates Co-Applicant Retirement Income</inlineHelpText>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Annual_Salary__c</fullName>
        <inlineHelpText>Provided by loan applicant</inlineHelpText>
        <label>Retirement Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSF_Link__c</fullName>
        <description>SSF link for partner contacts. Contact must have a partner lookup and a sales rep for the link to generate</description>
        <formula>IF(( NOT( ISBLANK(Sales_Representative__c) ) &amp;&amp; NOT( ISBLANK(Partner_Lookup__c) )), HYPERLINK(&quot;https://bluewavememberportal.force.com/apply/s/switch?salesrepID=&quot;&amp;Sales_Representative__c&amp;&quot;&amp;partnerId=&quot;&amp;Partner_Lookup__c, &quot;SSF Rep/Partner Link&quot;,
&quot;_blank&quot;),NULL)</formula>
        <inlineHelpText>SSF link for partner contacts</inlineHelpText>
        <label>SSF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the relationship to the Sales Team object. It allow the portal to show records unique to each Sales Rep.</description>
        <label>Sales Representative</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>PartnerContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates Co-Applicant Self Employment Income</inlineHelpText>
        <label>Self Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Annual_Salary__c</fullName>
        <inlineHelpText>Provided by loan applicant</inlineHelpText>
        <label>Self-Employment Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Soft_Pull_Credit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We can determine whether it&apos;s a soft pull or not by inspecting LASERCA__Credit_Report_Log__c.LASERCA__Login_Account__c. 

Soft Pull: bluewavesoft
Hard Pull: Bluewave2</description>
        <inlineHelpText>Check this checkbox to pull a credit report using the Soft Pull Transunion account, instead of a the Hard Pull account</inlineHelpText>
        <label>Soft Pull Credit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Town_Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Town Contacts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Management Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Town__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Avidia_Service_Provider__c</fullName>
        <inlineHelpText>Reg O question</inlineHelpText>
        <label>Type of Avidia Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Appraiser</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User record associated to a contact. Only applicable to internal users</inlineHelpText>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <infoMessage>This lookup is for internal users.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veteran_Annual_Salary__c</fullName>
        <inlineHelpText>Provided by loan applicant</inlineHelpText>
        <label>Veteran Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veteran_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates Co-Applicant Veteran or Disability Income</inlineHelpText>
        <label>Veteran Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Employment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact has been employed by current employer for more than a year</inlineHelpText>
        <label>Employed longer than a year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rcsfl__SMS_Number__c</fullName>
        <label>SMS Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rcsfl__SendSMS__c</fullName>
        <formula>HYPERLINK(&quot;javascript:sendCTIMessage(&apos;/CLICK_TO_DIAL?OBJECT_NAME=SMS&amp;DN=&quot; + rcsfl__SMS_Number__c + &quot;&apos;)&quot;, rcsfl__SMS_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendSMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Active_Communities_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Communities_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Communities User</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>kanzer</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Dover_Update</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>contains</operation>
            <value>jared</value>
        </filters>
        <label>Dover Project Update</label>
    </listViews>
    <listViews>
        <fullName>Invaleon_CS_Welcome</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Invaleon</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Duplicate</value>
        </filters>
        <label>Invaleon CS Welcome</label>
    </listViews>
</CustomObject>